[package]
name = "kiss3d_conrod"
version = "0.63.0"
authors = [
    "Mitchell Nordine <mitchell.nordine@gmail.com>",
    "Sven Nilsen <bvssvni@gmail.com>"
]
keywords = ["ui", "widgets", "gui", "interface", "graphics"]
description = "Fork of conrod_core (an easy-to-use, 100% Rust, extensible 2D GUI library) compatible with WASM and Kiss3D."
license = "MIT OR Apache-2.0"
readme = "../README.md"
repository = "https://github.com/pistondevelopers/conrod.git"
homepage = "https://github.com/pistondevelopers/conrod"
documentation = "http://docs.piston.rs/conrod/conrod/"
categories = ["gui"]

[package.metadata.docs.rs]
all-features = true

[features]
stdweb = [ "instant/stdweb" ]
wasm-bindgen = [ "instant/wasm-bindgen" ]

[dependencies]
conrod_derive = "0.63"
daggy = "0.5"
fnv = "1.0"
num = "0.2"
pistoncore-input = "0.24"
rusttype = { version = "0.8", features = ["gpu_cache"] }
instant = "0.1"
